--- a/bootMovieRating/pom.xml
+++ b/bootMovieRating/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<commons-io.version>2.6</commons-io.version>
 	</properties>
 
 	<dependencies>
@@ -71,6 +72,18 @@
 		</dependency>
 		
 		
+		
+		<dependency>
+	      	<groupId>org.apache.commons</groupId>
+	      	<artifactId>commons-lang3</artifactId>
+	    </dependency>
+	    <dependency>
+	      	<groupId>commons-io</groupId>
+	      	<artifactId>commons-io</artifactId>
+	      	<version>${commons-io.version}</version>
+	    </dependency>
+    
+    
 		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
 		<dependency>
 		    <groupId>com.googlecode.json-simple</groupId>
