--- a/bootMovieRating/src/main/resources/application.yaml
+++ b/bootMovieRating/src/main/resources/application.yaml
@@ -21,3 +21,6 @@ spring:
     url: jdbc:mysql://192.168.25.12:3306/movie?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: movie
     password: 1234
+   batch:
+    job:
+     enabled: false
