--- a/bootMovieRating/pom.xml
+++ b/bootMovieRating/pom.xml
@@ -58,7 +58,19 @@
 			<scope>runtime</scope>
 		</dependency>
 		
-		
+		<!-- oauth 2.0 -->
+		<dependency>
+		    <groupId>org.springframework.security.oauth</groupId>
+		    <artifactId>spring-security-oauth2</artifactId>
+		    <version>2.3.5.RELEASE</version>
+		</dependency>
+		<!-- jwt -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-jwt</artifactId>
+		    <version>1.0.10.RELEASE</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
